# TrainOpenCvCascade

./: .gitignore  README.md  train.sh
tools/: CMakeLists.txt  resizeImg.cpp  testCascade.cpp
